# gxci

./: Cargo.toml  Docsrs.md  Readme.md  SECURITY.md
examples/: hal_capture_callback.rs  hal_config_gain.rs  hal_get_image.rs  hal_get_image_raw.rs  hal_get_string.rs  hal_list_devices_info.rs  hal_use_stream.rs  raw_callback_capture.rs  raw_get_image.rs  raw_list_devices_info.rs  raw_open_device_by_index.rs  raw_open_device_by_sn.rs
src/: error.rs  lib.rs
src/hal/: base.rs  check.rs  config.rs  device.rs  event.rs  mod.rs  network.rs
src/hal/control/: acquisition.rs  analog.rs  chunk_data.rs  device.rs  digital_io.rs  image_format.rs  mod.rs  transport_layer.rs  user_set.rs
src/raw/: gx_callback.rs  gx_const.rs  gx_enum.rs  gx_handle.rs  gx_interface.rs  gx_struct.rs  mod.rs
src/utils/: builder.rs  cv_gui.rs  debug.rs  extract.rs  facade.rs  imgproc.rs  mod.rs  status.rs
